# util

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.MIT  README.md
.github/workflows/: cmake.yml
doc/: Doxyfile  compilerflags.rst  conf.py  datastructures.rst  index.rst  installation.rst  installation_changelog.rst  iterators.rst  requirements.txt  resourcemanagement.rst  ressourcemanagement.rst
doc/html/: index.html
doc/latex/: refman.tex
include/: util.hpp
include/util/: array.hpp  assert.hpp  buffer.hpp  color.hpp  data_frame.hpp  endian.hpp  enumerate.hpp  exception.hpp  flags.hpp  ignore_unused.hpp  multirator.hpp  non_copyable.hpp  non_moveable.hpp  range.hpp  ring_buffer.hpp  scoped.hpp  shared.hpp  sorted.hpp  sorted_vector.hpp  var.hpp
src/: CMakeLists.txt  array.cpp  assert.cpp  buffer.cpp  color.cpp  endian.cpp  enumerate.cpp  exception.cpp  flags.cpp  multirator.cpp  non_copyable.cpp  non_moveable.cpp  ring_buffer.cpp  scoped.cpp  shared.cpp  sorted.cpp  sorted_vector.cpp  util.cpp  var.cpp
test/: .clang-tidy  CMakeLists.txt  array.test.cpp  assert.test.cpp  buffer.test.cpp  endian.test.cpp  enumerate.test.cpp  flags.test.cpp  ignore_unused.test.cpp  multirator.test.cpp  non_copyable.test.cpp  non_moveable.test.cpp  range.test.cpp  ring_buffer.test.cpp  scoped.test.cpp  shared.test.cpp  sorted.test.cpp  sorted_vector.test.cpp  test.hpp  var.test.cpp
